# yazilim-lab-1-ders-cikti-analizi

./: .gitignore  README.md  pyproject.toml
data/: not_tablosu.xlsx  tablo1.xlsx  tablo2.xlsx
src/ders_cikti_analizi/: __init__.py  cli.py  processor.py
tests/: test_processor.py
